# rust-system

./: README.en.md  README.md
system-serve/: .gitignore  Cargo.toml  setting.toml
system-serve/src/: config.rs  handler.rs  main.rs  model.rs  service.rs
system-serve/src/config/: jwt_auth.rs  toml_conf.rs
system-serve/src/handler/: auth.rs  button.rs  job.rs  menu.rs  org.rs  product.rs  provinces.rs  role.rs  theme.rs
system-serve/src/handler/auth/: controller.rs
system-serve/src/handler/button/: controller.rs
system-serve/src/handler/job/: controller.rs
system-serve/src/handler/menu/: controller.rs
system-serve/src/handler/org/: controller.rs
system-serve/src/handler/product/: controller.rs
system-serve/src/handler/provinces/: controller.rs
system-serve/src/handler/role/: controller.rs
system-serve/src/handler/theme/: controller.rs
system-serve/src/model/: button.rs  city.rs  job.rs  menu.rs  org.rs  portal_product.rs  provinces.rs  request.rs  role.rs  theme.rs  user.rs
system-serve/src/service/: button_service.rs  city_service.rs  job_service.rs  menu_service.rs  org_service.rs  portal_product_service.rs  provinces_service.rs  role_service.rs  theme_service.rs  user_service.rs
system-vue/: .env.dev  .env.prod  .gitignore  package.json  vue.config.js
system-vue/src/: App.vue  bootstrap.js  main.js  permission.js
system-vue/src/api/: api.js  system-serve.js  user.js
system-vue/src/components/: global.less
system-vue/src/config/: config.js
system-vue/src/layouts/: AdminLayout.vue
yn_util/src/: dao.rs  utils.rs
(+70 files in other folders)
