[package]
name = "serve_admin"
version = "0.1.0"
authors = ["wujiajun <15820330954@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4"

mongodb = "1.1.1"
bson = "1.1.0"
async-trait = "0.1.42"
redis = { version = "0.17.0", features = ["cluster"] }

log = "0.4.11"
env_logger = "0.8.2"
chrono = "0.4.19"
anyhow = "1.0"
futures = { version = "0.3.8", default-features = false, features = ["async-await"]}

yn_util = { path = '../yn_util' }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3